# interpolate

./: .travis.yml  LICENSE  README.markdown  interpolate.cabal  package.yaml
src/Data/String/: Interpolate.hs
src/Data/String/Interpolate/: Compat.hs  IsString.hs  Parse.hs  Util.hs
src/Data/String/Interpolate/Internal/: Util.hs
src/Language/Haskell/: Expression.hs
src/Language/Haskell/Expression/: Lexer.hs
test/Data/String/: InterpolateSpec.hs
test/Data/String/Interpolate/: IsStringSpec.hs  ParseSpec.hs  UtilSpec.hs
test/Data/String/Interpolate/Internal/: UtilSpec.hs
test/Language/Haskell/: ExpressionSpec.hs
test/Language/Haskell/Expression/: LexerSpec.hs
