name:             interpolate
version:          0.0.0
license:          MIT
license-file:     LICENSE
copyright:        (c) 2013 Simon Hengel
author:           Simon Hengel <sol@typeful.net>
maintainer:       Simon Hengel <sol@typeful.net>
build-type:       Simple
cabal-version:    >= 1.8
category:         Data, Text
stability:        experimental
synopsis:         String interpolation done right
description:      String interpolation done right

source-repository head
  type: git
  location: https://github.com/sol/interpolate

library
  ghc-options:
      -Wall
  hs-source-dirs:
      src
  exposed-modules:
      Data.String.Interpolate
  other-modules:
      Data.String.Interpolate.Util
      Data.String.Interpolate.Parse
      Data.String.Interpolate.Compat
  build-depends:
      base    == 4.*
    , template-haskell
    , haskell-src-meta

test-suite spec
  type:
      exitcode-stdio-1.0
  ghc-options:
      -Wall -Werror
  hs-source-dirs:
      src, test
  main-is:
      Spec.hs
  build-depends:
      base    == 4.*
    , template-haskell
    , haskell-src-meta

    , text
    , bytestring
    , hspec >= 1.5
    , QuickCheck
    , quickcheck-instances
